correction bouton firefox

--- a/css/main.css
+++ b/css/main.css
@@ -4927,8 +4927,7 @@ h3 {
   text-decoration: none;
   color: #ffffff;
   box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.2);
-  display: block;
-  width: fit-content;
+  display: table;
   position: relative;
   z-index: 1;
   transition: all 0.3s ease;
