--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -5,8 +5,7 @@
     text-decoration: none;
     color: $brand-light;
     box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.2);
-    display: block;
-    width: fit-content;
+    display: table;
     position: relative;
     z-index: 1;
     transition: all 0.3s ease;
